--- a/ontrack/index.html
+++ b/ontrack/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset='UTF-8'>
+    <link rel='icon' href='/favicon.ico'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <title>Ontrack</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id='app' class='flex min-h-screen flex-col'></div>
+    <script type='module' src='/src/main.js'></script>
   </body>
 </html>
